---
source: bluejay-visibility/tests/integration_test.rs
expression: printed_schema_definition
input_file: bluejay-visibility/tests/test_data/simple_schema.graphql
---
directive @visible on FIELD_DEFINITION | ENUM_VALUE | INPUT_FIELD_DEFINITION | ARGUMENT_DEFINITION | SCALAR | OBJECT | INTERFACE | UNION | ENUM

enum MyEnum @visible {
  VISIBLE @visible
}

input MyInput @visible {
  visible: Int @visible
}

type MyObject @visible {
  visible(
    visible: MyInput @visible
  ): Int @visible
}

scalar MyScalar @visible

union MyUnion @visible = MyObject

type Query @visible {
  myEnum: MyEnum @visible

  myObject: MyObject @visible

  myUnion: MyUnion @visible

  myScalar: MyScalar @visible
}

